--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                app:cardCornerRadius="8dp"
+                app:cardCornerRadius="@dimen/card_corner_radius"
                 app:cardElevation="0dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -210,7 +210,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="12dp"
-                app:cardCornerRadius="8dp"
+                app:cardCornerRadius="@dimen/card_corner_radius"
                 app:cardElevation="0dp">
 
                 <androidx.recyclerview.widget.RecyclerView
