--- a/app/src/main/res/layout/item_monthly_activity_budget.xml
+++ b/app/src/main/res/layout/item_monthly_activity_budget.xml
@@ -39,9 +39,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:max="100"
         android:progress="10"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetAmountTextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
         app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
@@ -51,6 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="$10 / $100"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
         app:layout_constraintEnd_toEndOf="@+id/budgetNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
 
@@ -58,9 +60,8 @@
         android:id="@+id/budgetDividerView"
         android:layout_width="0dp"
         android:layout_height="0.75dp"
-        android:layout_marginTop="8dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/budgetProgressBar" />
+        app:layout_constraintStart_toStartOf="@+id/budgetNameTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
