--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,7 +53,7 @@
                         android:id="@+id/textViewCurrentBalanceAmount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Calculating..."
+                        android:text="$0.00"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/textViewBalance"
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-medium"
-                        android:text="$216.33 (1.51%)"
+                        android:text="$0.00 (0.00%)"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                         android:textColor="@color/colorPrimaryDark"
                         app:layout_constraintEnd_toEndOf="@+id/textViewCurrentBalanceAmount"
