--- a/app/src/main/res/layout/fragment_transaction_monthly_activity_item.xml
+++ b/app/src/main/res/layout/fragment_transaction_monthly_activity_item.xml
@@ -8,7 +8,7 @@
     tools:context=".TransactionMonthlyActivityItemFragment">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/monthAndYearTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -32,7 +32,7 @@
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/monthAndYearTextView">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -76,8 +76,8 @@
         android:text="Merchants"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="@+id/monthAndYearTextView"
+        app:layout_constraintStart_toStartOf="@+id/monthAndYearTextView"
         app:layout_constraintTop_toBottomOf="@id/cardViewBudget" />
 
     <androidx.cardview.widget.CardView
