--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -10,15 +10,15 @@
 
     <ImageView
         android:id="@+id/transactionLogoImageView"
-        android:layout_width="38sp"
-        android:layout_height="38sp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/logo_background"
-        android:padding="4sp"
+        android:background="@drawable/shopping_background"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/transactionDateTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/transactionNameTextView"
-        app:srcCompat="@drawable/ic_outline_shopping_cart_24" />
+        app:srcCompat="@drawable/shopping" />
 
     <TextView
         android:id="@+id/transactionNameTextView"
