--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -10,12 +10,12 @@
 
     <ImageView
         android:id="@+id/imageViewTransactionDetailLogo"
-        android:layout_width="38sp"
-        android:layout_height="38sp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/logo_background"
-        android:padding="4sp"
-        android:src="@drawable/ic_outline_shopping_cart_24"
+        android:background="@drawable/shopping_background"
+        android:padding="8sp"
+        android:src="@drawable/shopping"
         app:layout_constraintBottom_toTopOf="@+id/textViewTransactionDetailAmount"
         app:layout_constraintEnd_toEndOf="@+id/textViewTransactionDetailAmount"
         app:layout_constraintStart_toStartOf="@+id/textViewTransactionDetailAmount"
