--- a/app/src/main/res/drawable/health_background.xml
+++ b/app/src/main/res/drawable/health_background.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#E53626"/>
-    <corners android:radius="4dp" />
+    <solid android:color="#F45348"/>
+    <corners android:radius="6dp" />
 </shape>
