--- a/app/src/main/res/drawable/services_background.xml
+++ b/app/src/main/res/drawable/services_background.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#A043F6"/>
-    <corners android:radius="4dp" />
+    <solid android:color="#EE66B8"/>
+    <corners android:radius="6dp" />
 </shape>
