--- a/app/src/main/res/layout/item_monthly_activity_refunds.xml
+++ b/app/src/main/res/layout/item_monthly_activity_refunds.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/budgetConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
@@ -10,75 +9,75 @@
     android:focusable="true">
 
     <TextView
-        android:id="@+id/budgetNameTextView"
+        android:id="@+id/refundNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="8dp"
         android:lines="1"
-        android:text="Shopping"
+        android:text="Payments"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/budgetArrowImageView"
-        app:layout_constraintStart_toEndOf="@+id/budgetLogoImageView"
+        app:layout_constraintEnd_toStartOf="@id/refundAmountTextView"
+        app:layout_constraintStart_toEndOf="@id/refundLogoImageView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/budgetArrowImageView"
+        android:id="@+id/refundArrowImageView"
         android:layout_width="16dp"
         android:layout_height="0dp"
         android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetAmountTextView"
+        app:layout_constraintBottom_toBottomOf="@id/refundAmountTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
-        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
-        android:contentDescription="Arrow" />
+        app:layout_constraintTop_toTopOf="@id/refundNameTextView"
+        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
 
-    <ProgressBar
-        android:id="@+id/budgetProgressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+    <TextView
+        android:id="@+id/refundCountTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="10dp"
-        android:max="100"
-        android:progress="40"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/tertiary_text_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
-        app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
+        app:layout_constraintEnd_toStartOf="@id/refundAmountTextView"
+        app:layout_constraintStart_toStartOf="@id/refundNameTextView"
+        app:layout_constraintTop_toBottomOf="@id/refundNameTextView"
+        tools:text="2 Payments" />
 
     <TextView
-        android:id="@+id/budgetAmountTextView"
-        android:layout_width="100dp"
+        android:id="@+id/refundAmountTextView"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
         android:maxLines="1"
         android:text="$1000000.00"
+        android:textAlignment="viewEnd"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
-        app:layout_constraintEnd_toEndOf="@+id/budgetNameTextView"
-        app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
+        app:layout_constraintBottom_toBottomOf="@+id/refundNameTextView"
+        app:layout_constraintEnd_toStartOf="@+id/refundArrowImageView"
+        app:layout_constraintTop_toTopOf="@+id/refundNameTextView" />
 
     <View
-        android:id="@+id/budgetDividerView"
+        android:id="@+id/refundDividerView"
         android:layout_width="0dp"
         android:layout_height="0.7dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/budgetLogoImageView" />
+        app:layout_constraintStart_toStartOf="@id/refundLogoImageView" />
 
     <ImageView
-        android:id="@+id/budgetLogoImageView"
+        android:id="@+id/refundLogoImageView"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:background="@drawable/shopping_background"
+        android:background="@drawable/travel_background"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
+        app:layout_constraintBottom_toBottomOf="@id/refundCountTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/budgetNameTextView"
-        app:srcCompat="@drawable/shopping" />
+        app:layout_constraintTop_toTopOf="@id/refundNameTextView"
+        app:srcCompat="@drawable/travel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
